Slides: near to final

--- a/slides/slides_atu.tex
+++ b/slides/slides_atu.tex
@@ -14,15 +14,17 @@
 %\usepackage{fancybox}
 \usepackage{fouriernc}
 \usepackage{mathtools}
+\usepackage{ragged2e}
 
 \usepackage{scrextend}
-\changefontsizes{16pt}
+\changefontsizes{20pt}
 
 %\usepackage{caption}
 \setbeamertemplate{caption}[numbered]
 \setbeamertemplate{caption label separator}[endash]
-%\addtobeamertemplate{navigation symbols}{}{ \hspace{1em}  \usebeamerfont{footline}  {\normalsize \insertframenumber / \inserttotalframenumber}}
-% \addtobeamertemplate{navigation symbols}{}{ \hspace{1em}  \usebeamerfont{footline}  {\normalsize \color{black} \insertframenumber }}
+% \setbeamerfont{caption}{size=\scriptsize}
+% \setbeamerfont{caption}{series=\normalfont,size=\fontsize{20}{24}}
+\setbeamerfont{caption}{size=\small}
 
 
 % \setbeamertemplate{note page}[plain]
@@ -69,14 +71,14 @@
 
 % pics
 \newcommand{\ABlbl}{%
-  \vspace{-2.7ex}
+  \vspace{-2.9ex}
   \begin{center}
     ~ \hfill a \hfill\hfill b \hfill ~
   \end{center}
   \vspace{-2.0ex}
 }
 \newcommand{\ABClbl}{%
-  \vspace{-2.7ex}
+  \vspace{-2.9ex}
   \begin{center}
     ~ \hfill a \hfill\hfill b \hfill\hfill c \hfill ~
   \end{center}
@@ -135,8 +137,9 @@
 
 \makeatletter
 \setbeamertemplate{frametitle}{%
-    \vspace{5mm} \leavevmode
-    \hfill {\normalsize \color{black} \insertframenumber } \hspace{10mm}%
+    \vspace{3mm} \leavevmode
+    \hfill {\normalsize \color{black} \insertframenumber } \hspace{5mm}%
+    \vspace{-7mm}
     %\vspace{5mm}% \leavevmode
     %\hfill \insertframetitle \hfill~
 }
@@ -157,6 +160,9 @@
 % }
 \makeatother
 
+\apptocmd{\frame}{}{\justifying}{} % Allow optional arguments after frame.
+
+
 \newcommand{\RelaxBjtIi}{системи з трьох пов'язаних релаксаційних генераторів на парі компліментарних транзисторів}
 \newcommand{\RelaxShIi}{системи з трьох пов'язаних релаксаційних генераторів на основі тригерів Шмідта}
 % -----------------------------------------------------------------------
@@ -171,7 +177,7 @@
 
     \vfill
 
-    {\dissSpecId --- \dissSpecUa}
+    {\small \dissSpecId --- \dissSpecUa}
 
     \vfill
 
@@ -179,11 +185,11 @@
 
     \vfill
 
-    {Дисертаційна робота на здобуття наукового ступеня доктора наук}
+    {\small Дисертаційна робота на здобуття наукового ступеня доктора наук}
 
     \vfill
 
-    Науковий консультант --- д.т.н., проф. \superUa
+    Науковий консультант --- д.т.н., проф. \\ \superUa
 
 
   %     Дніпро --- 2018
@@ -192,25 +198,30 @@
 
   \vfill
 
-\textbf{Об'єкт дослідження } ---
-технічні системи, які в процесі їх функціювання можуть
-входити в хаотичні режими.
+  \textbf{Науково-технічна проблема}: ідентифікація параметрів складних технічних
+  систем у режимі хаотичної динаміки
+  з метою забезпечення їх керованої поведінки.
 
-\smallskip
-\textbf{Предмет дослідження } ---
-математичні моделі процесів та методи
-ансамблевої ідентифікації технічних систем з хаотичною динамікою.
+  \vfill
 
-\smallskip
-\textbf{Методи дослідження.}
-Для вирішення поставлених задач використовувався математичний апарат
-теорії управління та ідентифікації нелінійних систем, динамічного хаосу,
-обчислювальних методів, нечіткої логіки, теорії інформації тощо.
+  \textbf{Об'єкт дослідження } ---
+  технічні системи, які в процесі їх функціювання можуть
+  входити в хаотичні режими.
 
-\smallskip
-Науково-технічна проблема: ідентифікація параметрів складних технічних
-систем у режимі хаотичної динаміки
-з метою забезпечення їх керованої поведінки.
+  \vfill
+
+  %\smallskip
+  \textbf{Предмет дослідження } ---
+  математичні моделі процесів та методи
+  ансамблевої ідентифікації технічних систем з хаотичною динамікою.
+
+  \vfill
+
+  \textbf{Методи дослідження.}
+  Для вирішення поставлених задач використовувався математичний апарат
+  теорії управління та ідентифікації нелінійних систем, динамічного хаосу,
+  обчислювальних методів, нечіткої логіки, теорії інформації тощо.
+
 \end{frame}
 
 % -----------------------------------------------------------------------
@@ -225,7 +236,7 @@
 
   \begin{itemize}
 
-    \item
+    \item \justifying
       Нелінійні динамічні системи, розповсюджені в сучасних технологічних і
       природних процесах, незважаючи на детермінізм їх визначення, можуть проявляти
       хаотичні властивості в своїй динаміці. При цьому як завгодно малі збурення у вхідних
@@ -233,17 +244,17 @@
       вихідного сигналу. Це призводить до певних труднощів при конструюванні,
       управлінні і прогнозі поведінки таких систем.
 
-    \item
+    \item \justifying
       Існуючі методи ідентифікації або принципово непридатні для
       роботи з хаотичними системами, або ж вимагають виконання досить
       жорстких умов.
 
-    \item
+    \item \justifying
       Існують динамічні системи, що не володіють строгими
       властивостями хаотичності, але мають з ними спільні властивості
       з точки зору ідентифікації.
 
-    \item
+    \item \justifying
       Властивості існуючих методів ідентифікації нелінійних
       динамічних систем обмежують досяжну якість ідентифікації,
       особливо стосовно до хаотичних систем.
@@ -266,39 +277,41 @@
 використанням адаптивно-пошукових принципів настроювання параметрів, які
 були б придатні для створення моделей систем, які проявляють хаотичну динаміку.
 
+\vfill
+
 \textbf{Задачі дослідження:}
   \begin{itemize}
 
-    \item
+    \item \justifying
       розробити нові критерії ідентифікації, які, на відміну від тих, що
       існують, були б придатні для аналізу стану та динаміки
       систем з хаотичною динамікою, і створять базис для обґрунтування працездатності систем
       ідентифікації;
 
-    \item
+    \item \justifying
       розвинути існуючі та розробити нові методи пошуку, які б
       у повної мірі використовували можливості
       паралельних обчислювань та переваг використання ансамблю
       синергірованних моделей;
 
-    \item
+    \item \justifying
       створити моделі процесів
       ідентифікації хаотичних систем з використанням запропонованих методів,
       провести комп'ютерне моделювання процесів ідентифікації систем
       хаотичної динаміки та дослідити їх працездатність, можливості та
       характеристики;
 
-    \item
+    \item \justifying
       розробити нову фізичну систему з хаотичною поведінкою
       на підставі системи зв'язаних релаксаційних елементів,
       що надасть можливість дослідити та підтвердити переваги
       розроблених методів ідентифікації;
 
-    \item
+    \item \justifying
       провести натурне моделювання процесів ідентифікації запропонованого
       генератора хаосу, та порівняти з результатами комп'ютерного моделювання;
 
-    \item
+    \item \justifying
       розробити програмне забезпечення, придатне для моделювання систем
       хаотичної динаміки, систем ідентифікації, предікції та управління.
 
@@ -315,18 +328,19 @@
 
   \Xhead{Наукова новизна}
 
+  {\small
   \noindent
   \textbf{Вперше:}
   %
   \begin{itemize}
 
-    \item
+    \item \justifying
       створено критерії ідентифікації нелінійних динамічних систем,
       які, на відміну від тих, що існують, дозволяють оцінити їх стан та
       хаотичну динаміку, а також дають підстави для створення ефективних алгоритмів
       настроювання параметрів моделей систем ідентифікації;
 
-    \item
+    \item \justifying
       створено методи ідентифікації на підставі
       адаптивно-пошукової парадигми з використанням ансамблю пошукових агентів,
       які взаємодіють проміж собою, які на відміну від методів, що використовують
@@ -335,20 +349,20 @@
       відміну від ройових алгоритмів нові методи потребують значно меншої
       кількості моделей та забезпечують певні гарантії пошуку;
 
-    \item
+    \item \justifying
       створено нову класифікацію систем ідентифікації динамічних систем,
       яка, як вбирає у себе методи, що існують, так і дозволяє
       створювати нові методи ідентифікації за рахунок
       комбінування їх складових частин;
 
-    \item
+    \item \justifying
       визначено, що системи з сухим тертям з точки зору задачі ідентифікації
       при певних  умовах функціонування
       мають властивості, що поєднують їх з системами хаотичної динаміки, тобто існує
       суттєва залежність від початкових
       умов та характерний вид атрактору;
 
-    \item
+    \item \justifying
       запропоновано модель системи хаотичної динаміки
       з використанням зв'язаних релаксаційних генераторів,
       яка відрізняється від існуючих відсутністю індуктивних компонентів,
@@ -359,7 +373,7 @@
       та властивостей системи ідентифікації.
   \end{itemize}
 
-
+  } % small
 \end{frame}
 
 
@@ -372,21 +386,21 @@
   %\framesubtitle{}
 
   \noindent
-  \textbf{ Набуло подальший розвиток:}
+  \textbf{Набуло подальший розвиток:}
   \begin{itemize}
 
-    \item
+    \item \justifying
       методи оцінювання якості ідентифікації,
       які на відміну від тих, що існують,
       враховують використання множини агентів;
 
-    \item
+    \item \justifying
       підходи до адаптації параметрів систем
       ансамблевої ідентифікації, які придатні використовувати поточну
       інформацію від ансамблю синергірованих моделей та коригувати глобальні
       параметри пошуку в умовах апріорної та поточної невизначеності;
 
-    \item
+    \item \justifying
       модель генератора Колпітца, яка враховує
       більшу кількість нелінійних ефектів,
       що забезпечує більш адекватні результати процесу
@@ -402,6 +416,11 @@
 дав можливість вказати необхідні нелінійні властивості системи
 та діапазон параметрів, які у сукупності
 забезпечують широкосмуговий спектр коливань.
+
+Результати також використно
+при ідентифікації режиму роботи вертикально\-осьової вітроустановки з H-ротором Дар'є
+з врахуванням складно-періодичної або хаотичної структури коливань лопатей
+(Інститут транспортних систем і технологій НАН України, м.~Дніпро).
 
 Створене програмне середовище для моделювання нелінійних динамічних систем
 використовується при проведенні практичних робіт по дисциплінам
@@ -489,10 +508,12 @@
       ~ \hfill
       \parbox[t]{48\TW}{\centering Адаптивно-пошукова ідентифікація зі збуренням параметра однієї моделі}
       \hfill
-      \parbox[t]{48\TW}{\centering Система адаптивно-пошукової ідентифікація з парою моделей і двома генераторами із загальним скиданням}
+      %\parbox[t]{48\TW}{\centering Система адаптивно-пошукової ідентифікація з парою моделей і двома генераторами із загальним скиданням}
+      \parbox[t]{48\TW}{\centering Система адаптивно-пошукової ідентифікація з парою моделей і двома генераторами}
       \hfill ~
     \end{center}
     \label{atu:f:oldsch}
+    \vspace{-2ex}
     \caption{Існуючі методи}
   \end{figure}
 
@@ -593,6 +614,8 @@
       \end{equation}
 
     \end{column}
+    \hspace{-10pt}
+    \vrule{}
     \begin{column}{49\TW}
       Основні види залежностей:
 
@@ -746,7 +769,7 @@
   ідентифікації, реалізує алгоритм настройки параметрів моделі (моделей) таким
   чином, щоб забезпечити визначення заданого параметра.
 
-  \medskip
+  \smallskip
 
   Визначення:
   \textbf{координатор пошуку} --- це динамічна система, яка отримує інформацію
@@ -755,6 +778,7 @@
   Крім цього, координатор може, на підставі цієї ж інформації,
   керувати процесом адаптації всієї пошукової системи.
 
+  \vspace{-7ex}
 
   \begin{figure}[htb!]
     \begin{center}
@@ -764,9 +788,9 @@
     \label{atu:f:agents_flat}
   \end{figure}
 
-  Таким чином, система ідентифікації складається з множини агентів, та
-  множини координаторів пошуку, які спільно вирішують задачу ідентифікації.
-  За винятком ієрархічних систем ідентифікації, найчастіше використовується один координатор пошуку.
+  % Таким чином, система ідентифікації складається з множини агентів, та
+  % множини координаторів пошуку, які спільно вирішують задачу ідентифікації.
+  % За винятком ієрархічних систем ідентифікації, найчастіше використовується один координатор пошуку.
 
 \end{frame}
 
@@ -778,22 +802,24 @@
 
   \Xhead{Конфігурації агентів і координаторів}
 
-\textbf{Рій} --- множина агентів, що забезпечує ідентифікацію за рахунок
-концентрації максимальної кількості агентів в області передбачуваного максимуму
-функції якості або ж заданого значення критерію. Три складові поведінки: рух
-до оцінюваного локального екстремуму, до глобального, випадкова складова.
+  \textbf{Рій} --- множина агентів, що забезпечує ідентифікацію за рахунок
+  концентрації максимальної кількості агентів в області передбачуваного максимуму
+  функції якості або ж заданого значення критерію.
+  %Три складові поведінки: рух
+  %до оцінюваного локального екстремуму, до глобального, випадкова складова.
 
-\textbf{Стрій} --- множина агентів, розташування яких, і якщо необхідно,
-зміщення, задається однаковим чином. Відсутня індивідуальна динаміка кожного
-агента. Нерухомий стрій утворює \textbf{сітку},
-як рівномірно розподілену по простору параметрів, так і~ні.
+  \textbf{Стрій} --- множина агентів, розташування яких, і якщо необхідно,
+  зміщення, задається однаковим чином.
+  %Відсутня індивідуальна динаміка кожного
+  %агента. Нерухомий стрій утворює \textbf{сітку},
+  %як рівномірно розподілену по простору параметрів, так і~ні.
 
-\textbf {Ансамбль} ---
-множина агентів, що забезпечує ідентифікацію за рахунок розподілу агентів таким
-чином, який забезпечує як точність ідентифікації за рахунок обмеженого
-скупчення агентів в областях передбачуваних максимумів функції якості, так і оперативного
-переключення на інші області при зміні параметрів за рахунок недопущення
-невиправданої скупченості агентів.
+  \textbf {Ансамбль} ---
+  множина агентів, що забезпечує ідентифікацію за рахунок розподілу агентів таким
+  чином, який забезпечує як точність ідентифікації за рахунок обмеженого
+  скупчення агентів в областях передбачуваних максимумів функції якості, так і оперативного
+  переключення на інші області при зміні параметрів за рахунок недопущення
+  невиправданої скупченості агентів.
 
   \begin{figure}[htb!]
     \begin{center}
@@ -803,6 +829,7 @@
     \label{atu:f:agent1}
   \end{figure}
 
+  \vspace{-5ex}
 
   \begin{figure}[htb!]
     \begin{center}
@@ -839,23 +866,25 @@
       $F_c(t)$ ---
       поточне значення функції якості (якщо використовується одна
       модель для агента, або ж якщо агент якимось чином її усереднює
-      або апроксимує в разі декількох моделей). Може поєднувати
-      функції вхідного і вихідного сигналів.
+      або апроксимує в разі декількох моделей).
+      % Може поєднувати функції вхідного і вихідного сигналів.
 
     \item
       $q_c(t)$ ---
-      значення критерію якості (аналогічно попередньої величиною в
-      разі декількох моделей); спочатку цей сигнал був представлений
-      як вхідний для агента, проте він може використовуватися і
-      на більш високих рівнях системи ідентифікації. Якщо ж агенту
-      значення критерію недоступно, то і в списку вихідних сигналів
-      ця величина також відсутня.
+      значення критерію якості;
+      % (аналогічно попередньої величиною в
+      % разі декількох моделей); спочатку цей сигнал був представлений
+      % як вхідний для агента, проте він може використовуватися і
+      % на більш високих рівнях системи ідентифікації. Якщо ж агенту
+      % значення критерію недоступно, то і в списку вихідних сигналів
+      % ця величина також відсутня.
 
     \item
       $F_e(t)$ ---
       апроксимоване значення функції якості в точці
-      $p_e(t)$. Якщо агент не використовує для роботи апроксимацію
-      $F$, то і відповідний вихідний сигнал не використовується.
+      $p_e(t)$.
+      % Якщо агент не використовує для роботи апроксимацію
+      % $F$, то і відповідний вихідний сигнал не використовується.
 
     \item
       $S(t)$ ---
@@ -865,19 +894,25 @@
    $W(t) = F_c(t) S(t)$ --- worthiness.
   \end{itemize}
 
-%
+\vfill
+
 \begin{equation}
   S_1 = c_\mathrm{su} \exp \left( - \frac{ \big( k_l c_\mathrm{dist} ( p_e - p_c ) \big)^2 }{p_b^2} \right)
   ,
   \label{atu:eq:S1}
 \end{equation}
-%
+
+\vfill
+
 \begin{equation}
   S_3 = c_\mathrm{su} \exp \left( - \frac{ \big( k_l c_\mathrm{dist} \min( |p_e - p_l|,|p_e - p_c|, |p_e - p_r| ) \big)^2 }{p_b^2} \right)
   .
   \label{atu:eq:S3}
 \end{equation}
+\vfill
+
 %
+\noindent
 де
 $c_\mathrm{su}$ ---
 коефіцієнт, що відображає працездатність методу в даному випадку;
@@ -908,7 +943,7 @@ $p_b$
 
   Якщо
   $F_c \le F_\mathrm{good}$, то $q_o -q_c \ne 0$,
-  і можна застосувати наступні перетворення:
+  %і можна застосувати наступні перетворення:
   %
   \[
     \tilde{p}_l = p_l - p_c;
@@ -958,7 +993,7 @@ $p_b$
   \vspace{-7ex}
 
   \begin{equation}
-    \tilde{p}_e
+    \tilde{p}_{eql}
     =
     \begin{cases}
       \tilde{p}_{el}, & \tilde{q}_l < 0
@@ -966,22 +1001,23 @@ $p_b$
       \tilde{p}_{er}, & \text{ otherwise}.
     \end{cases}
     ,
-    c_\mathrm{su} = 1.0, \;  c_\mathrm{dist} = 0.5,  \;
-    p_b =
-    \begin{cases}
-      -\tilde{p}_l, & \tilde{q}_l < 0
-      \\
-      \tilde{p}_r, & \text{ otherwise}.
-    \end{cases}.
+    c_\mathrm{su} = 1.0, \;  c_\mathrm{dist} = 0.5,
+    \;.
+    % p_b =
+    % \begin{cases}
+    %   -\tilde{p}_l, & \tilde{q}_l < 0
+    %   \\
+    %   \tilde{p}_r, & \text{ otherwise}.
+    % \end{cases}.
     \label{atu:eq:pr_e4}
   \end{equation}
 
-  Останні випадки,
-  характеризуються меншою ``упевненістю'' в отриманому значенні $p_e$,
-  що відображається у коефіцієнтах
-  $c_\mathrm{su}$, $c_\mathrm{dist}$ та  $p_b$.
+  % Останні випадки,
+  % характеризуються меншою ``упевненістю'' в отриманому значенні $p_e$,
+  % що відображається у коефіцієнтах
+  % $c_\mathrm{su}$, $c_\mathrm{dist}$ та  $p_b$.
 
-  Цій метод означимо як $p_{eql}$.
+  %Цій метод означимо як $p_{eql}$.
 
 \end{frame}
 
@@ -1047,13 +1083,13 @@ $p_b$
   Оцінювання $p_e$ методом COG за значеннями функції якості:
  %
  \begin{equation}
-   p_e =
+   p_{eFc }=
    \frac{p_l F_l + p_c F_c + p_r F_r}{ F_r + F_c + F_r}  .
    \label{atu:eq:p_eFc}
  \end{equation}
 
-Умова обмеженості оцінки $p_e \in [p_l; p_r]$ в цьому випадку виконується
-автоматично. Визначення $p_e$ по (\ref{atu:eq:p_eFc}) в подальшому будемо позначати $p_{eFc}$.
+% Умова обмеженості оцінки $p_e \in [p_l; p_r]$ в цьому випадку виконується
+% автоматично. Визначення $p_e$ по (\ref{atu:eq:p_eFc}) в подальшому будемо позначати $p_{eFc}$.
 
 \end{frame}
 
@@ -1146,8 +1182,8 @@ $p_b$
   \label{atu:eq:f_t}
 \end{equation}
 
-  Можна використовувати різні способи визначення пошукової динаміки агента при
-  заданій силі. Наприклад, метод ``важкої кульки'':
+  Способи визначення пошукової динаміки агента:
+  Метод ``важкої кульки'':
   \begin{equation}
     m \ddot{p}_c + \nu \dot{p}_c = f_t(t),
     \label{atu:eq:heavy_ball}
@@ -1155,9 +1191,10 @@ $p_b$
   %
   де $m$ --- еквівалент маси кульки, $\nu$ --- коефіцієнт умовної в'язкості.
 
-  Також може використовуватися наближення динаміки тіла у в'язкій рідині, коли
-  вплив інерції дуже малий в порівнянні з в'язкістю, при цьому зміни параметрів
-  моделей (пошукових агентів) задаються наступним чином:
+  Наближення динаміки тіла у в'язкій рідині:
+  % , коли
+  % вплив інерції дуже малий в порівнянні з в'язкістю, при цьому зміни параметрів
+  % моделей (пошукових агентів) задаються наступним чином:
   %
   \begin{equation}
     \od{p_c}{t} = v_f f_t(t),
@@ -1287,6 +1324,7 @@ $p_{leW}$.
 
   \Xhead{Класифікація систем пошукової ідентифікації}
 
+  {\small
   \begin{enumerate}
 
     \item
@@ -1336,10 +1374,12 @@ $p_{leW}$.
 
   \end{enumerate}
 
-Приклад позначень:
-``Fc3zlovngcW.$q_{x^2}$'',
-``ql3ruWvnAeF'',
-``xl2nlosdlcA''.
+  Приклад позначень:
+  ``Fc3zlovngcW.$q_{x^2}$'',
+  ``ql3ruWvnAeF'',
+  ``xl2nlosdlcA''.
+
+} % small
 
 \end{frame}
 
@@ -1456,7 +1496,8 @@ $p_{leW}$.
 
   \end{itemize}
 
-  Open source, GPLv2+, \url{https://github.com/atu-guda/qontrol}
+  Open source, GPLv2+, \\
+  \url{https://github.com/atu-guda/qontrol}
 
 
 \end{frame}
@@ -1583,15 +1624,18 @@ $p_{leW}$.
     \label{atu:f:lor_id_Fl2nlosdlcA_wp009}
   \end{figure}
 
+  \vspace{-3ex}
+
   \begin{figure}[htb!]
-    \PicDoubleS{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qy2-p_t_pi_sign.png}{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qy2-p_t_pz_sign.png}
+    \PicDouble{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qy2-p_t_pi_sign.png}{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qy2-p_t_pz_sign.png}
     \caption{Процес ідентифікації параметра ``$r$'' системи Лоренца групою методів ql3ruonAAF.$q_{x^2} $ за умови~(\ref{atu:eq:po_t_sign}): динаміка агентів~(a) та $p_\mathrm{id}$~(b)}
     \label{atu:f:lor_id_ql3ruonAAF.q_x2_sign}
   \end{figure}
 
+  \vspace{-3ex}
 
   \begin{figure}[htb!]
-    \PicDoubleS{../p5/p/cha/lor/Fq3zlovnAAF/lor_Fq3zlovnAAF_qx2-pl_n_sign.png}{../p5/p/cha/lor/Fq3zlovnAAF/lor_Fq3zlovnAAF_qx2-p_p_sign.png}
+    \PicDouble{../p5/p/cha/lor/Fq3zlovnAAF/lor_Fq3zlovnAAF_qx2-pl_n_sign.png}{../p5/p/cha/lor/Fq3zlovnAAF/lor_Fq3zlovnAAF_qx2-p_p_sign.png}
     \caption{Процес ідентифікації параметра ``$r$'' системи Лоренца групою методів Fq3zlovnAAF.$q_{x^2} $ за умови~(\ref{atu:eq:po_t_sign}): динаміка агентів~(a) та $p_\mathrm{id}$~(b)}
     \label{atu:f:lor_id_Fq3zlovnAAF.q_x2_sign}
   \end{figure}
@@ -1609,16 +1653,20 @@ $p_{leW}$.
   \Xhead{Вплив параметрів системи ідентифікації}
 
   \begin{figure}[htb!]
-    \PicDoubleS{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qx2-p_a_q_e_sign.png}{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qx2-p_a_q_e_sin.png}
+    \PicDouble{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qx2-p_a_q_e_sign.png}{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qx2-p_a_q_e_sin.png}
     \caption{Залежності $\overline{e}_{r *}(a_q)$ при ідентифікації системи Лоренца групою методів ql3ruonAAF.$q_{x^2} $ при~(\ref{atu:eq:po_t_sign})~(a) і (\ref{atu:eq:po_t_sin})~(b)}
     \label{atu:f:lor_a_q_ql3ruonAAF.q_x2}
   \end{figure}
 
+  \vspace{-3ex}
+
   \begin{figure}[htb!]
-    \PicDoubleS{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qx2-p_qgamma_e_sign.png}{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qx2-p_qgamma_e_sin.png}
+    \PicDouble{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qx2-p_qgamma_e_sign.png}{../p5/p/cha/lor/ql3ruonAAF/lor_ql3ruonAAF_qx2-p_qgamma_e_sin.png}
     \caption{Залежності $\overline{e}_{r *}(q_\gamma)$ при ідентифікації системи Лоренца групою методів ql3ruonAAF.$q_{x^2} $ при~(\ref{atu:eq:po_t_sign})~(a) і (\ref{atu:eq:po_t_sin})~(b)}
     \label{atu:f:lor_qg_ql3ruonAAF.q_x2}
   \end{figure}
+
+  \vspace{-3ex}
 
   \begin{figure}[htb!]
     \PicDoubleS{../p5/p/cha/lor/Fq3zlovnAAF/f_type/lor_Fq3zlovnAAF_qx2_Ft-p_qg_e_all_sign_rge.png}{../p5/p/cha/lor/Fq3zlovnAAF/f_type/lor_Fq3zlovnAAF_qx2_Ft-p_qg_e_all_sin_rge.png}
@@ -1640,6 +1688,7 @@ $p_{leW}$.
 
 \begin{figure}[htb!]
   \PicDouble{../p5/p/cha/lor/q2d/lor_qx2_r_b.png}{../p5/p/cha/lor/q2d/lor_qy2_r_b.png}
+  \vspace{2ex}
   \PicDoubleNL{../p5/p/cha/lor/q2d/lor_qz2_r_b.png}{../p5/p/cha/lor/q2d/lor_qxmy2_r_b.png}
   \vspace{-2.7ex}
   \begin{center}
@@ -1800,14 +1849,18 @@ $p_{leW}$.
     \label{atu:f:fric_id_ql3rlWvnAAW_q_dx_sign}
   \end{figure}
 
+  \vspace{-2ex}
+
   \begin{figure}[htb!]
-    \PicDoubleS{../p5/p/cha/fric/ql3rlWvnAAW/fric_id-p_a_q_sign.png}{../p5/p/cha/fric/ql3rlWvnAAW/fric_id-p_a_q_sin.png}
+    \PicDouble{../p5/p/cha/fric/ql3rlWvnAAW/fric_id-p_a_q_sign.png}{../p5/p/cha/fric/ql3rlWvnAAW/fric_id-p_a_q_sin.png}
     \caption{Залежності $\overline{e}(a_q)$ при ідентифікації системи (\ref{atu:eq:dryfric_sys}) групою методів ql3rlWvnAAW.$q_\mathrm{dx} $ при~(\ref{atu:eq:po_t_sign})~(a) і (\ref{atu:eq:po_t_sin})~(b)}
     \label{atu:f:fric_a_q_ql3rlWvnAAW_q_dx}
   \end{figure}
 
+  \vspace{-2ex}
+
   \begin{figure}[htb!]
-    \PicDoubleS{../p5/p/cha/fric/ql3rlWvnAAW/fric_id-p_q_gamma_sign.png}{../p5/p/cha/fric/ql3rlWvnAAW/fric_id-p_q_gamma_sin.png}
+    \PicDouble{../p5/p/cha/fric/ql3rlWvnAAW/fric_id-p_q_gamma_sign.png}{../p5/p/cha/fric/ql3rlWvnAAW/fric_id-p_q_gamma_sin.png}
     \caption{Залежності $\overline{e}(q_\gamma)$ при ідентифікації системи (\ref{atu:eq:dryfric_sys}) групою методів ql3rlWvnAAW.$q_\mathrm{dx} $ при~(\ref{atu:eq:po_t_sign})~(a) і (\ref{atu:eq:po_t_sin})~(b)}
     \label{atu:f:fric_q_gamma_ql3rlWvnAAW_q_dx}
   \end{figure}
@@ -1830,11 +1883,13 @@ $p_{leW}$.
 
   \begin{figure}[htb!]
     \begin{center}
-      \input{../p6/p/mod/colp_scheme.pgf}
+      \includegraphics[width=40\TW]{../p6/p/mod/colp_scheme.pdf}
     \end{center}
     \caption{Електрична схема генератора Колпітца на біполярному транзисторі}
     \label{atu:f:colp_schem}
   \end{figure}
+
+  \vspace{-4ex}
 
   \begin{equation}
     \label{atu:eq:colp_phys}
@@ -1876,7 +1931,7 @@ $p_{leW}$.
     I_c
     = I_s \left( \exp\frac{V_{be}}{U_t N_f} - 1 \right)
     \cdot
-    \left( 1 + \frac{V_{ce}}{V_{af}}\right),
+    \left( 1 + \frac{V_{ce}}{V_{af}}\right).
     \label{atu:eq:bjt_model_sub}
   \end{equation}
 
@@ -1911,13 +1966,14 @@ $p_{leW}$.
 
   \begin{figure}[htb!]
     \PicDoubleNL{../p6/p/colp_bjt_q-p_Rc_q.png}{../p6/p/colp_q_cml.png}
+    \vspace{-3ex}
     \parbox[t]{\DDP} {
       \caption{Критерії ідентифікації для моделі системи Колпітца}
       \label{atu:f:colp_bjt_q-p_Rc_q}
     }
     \hfill
     \parbox[t]{\DDP} {
-      \caption{Порівняння залежностей критерію $q_{xz}$ реального генератора Колпітца з моделлю}
+      \caption{Порівняння $q_{xz}(R_c)$ реального генератора Колпітца з моделлю}
       \label{atu:f:colp_q_cml}
     }
   \end{figure}
@@ -1956,15 +2012,16 @@ $p_{leW}$.
   \begin{figure}[htb!]
     \PicDoubleNL{../p6/p/r/colp_real_id-p_a_q_d_0.png}{../p6/p/r/colp_real_id-p_q_gamma_d_0.png}
     \parbox[t]{\DDP} {
-      \caption{Залежності $\overline{e} (a_q) $ при ідентифікації параметра $ R_c $ генератора Колпітца за умов \ref{atu:eq:colp_test1_cond}}
+      \caption{Залежності $\overline{e} (a_q) $ при ідентифікації параметра $ R_c $ генератора Колпітца}
       \label{atu:f:colp_real_id_p_a_q_d_0}
     }
     \hfill
     \parbox[t]{\DDP} {
-      \caption{Залежності $ \overline{e} (q_\gamma) $ при ідентифікації параметра $ R_c $ генератора Колпітца за умов \ref{atu:eq:colp_test1_cond}}
+      \caption{Залежності $ \overline{e} (q_\gamma) $ при ідентифікації параметра $ R_c $ генератора Колпітца}
       \label{atu:f:colp_real_id_p_q_gamma_d_0}
     }
   \end{figure}
+% \caption{Залежності $\overline{e} (a_q) $ при ідентифікації параметра $ R_c $ генератора Колпітца за умов (\ref{atu:eq:colp_test1_cond})}
 
 
 \end{frame}
@@ -1991,7 +2048,7 @@ $p_{leW}$.
 \end{equation}
 
   \begin{figure}
-    \centerline{\includegraphics[width=0.86\textwidth]{../p7/p/relax3d_schem.png} }
+    \centerline{\includegraphics[width=0.82\textwidth]{../p7/p/relax3d_schem.png} }
     \caption{Електрична схема \RelaxBjtIi}
   \end{figure}
 
@@ -2060,10 +2117,10 @@ $p_{leW}$.
 \end{equation}
 %
 де: \\
-$R_b $ --- опір в ланцюзі живлення (ідентифікований параметр),
-$C_i $ --- ємності кожного з релаксаційних генераторів,
-$R_{vi} $ --- опори зарядки релаксаційних генераторів,
-$R_{ i} $ --- опори зарядки релаксаційних генераторів,
+$R_b $ --- опір в ланцюзі живлення (ідентифікований параметр), \\
+$C_i $ --- ємності кожного з релаксаційних генераторів, \\
+$R_{vi} $ --- опори зарядки релаксаційних генераторів, \\
+$R_{ i} $ --- опори зарядки релаксаційних генераторів, \\
 $I_{i, \mathrm{leak}} $ --- струми витоку.
 
 
@@ -2116,7 +2173,7 @@ $I_{i, \mathrm{leak}} $ --- струми витоку.
   \Xhead{}
 
   \begin{figure}
-    \PicDouble{../p7/p/relax3ds_read_id2_0-p_p.png}{../p7/p/relax3ds_read_id2_0-p_pp.png}
+    \PicDouble{../p7/p/relax3ds_read_id2_0-p_p_cr.png}{../p7/p/relax3ds_read_id2_0-p_pp_cr.png}
     \caption{Процес ідентифікації системи ``relax3ds'' групою методів ``Fq3zlovnAAF'': динаміка агентів~(a) та $p_\mathrm{id}$~(b)}
   \end{figure}
 
@@ -2186,39 +2243,39 @@ $I_{i, \mathrm{leak}} $ --- струми витоку.
 
 У роботі вирішена науково-технічна проблема ідентифікації параметрів складних технічних
 систем у режимі хаотичної динаміки
-з метою забезпечення їх керованої поведінки. При цьому:
+з метою забезпечення їх керованої поведінки.
 
 \begin{itemize}
 
-  \item
+  \item \justifying
     створено нові критерії ідентифікації, які, на відміну від тих, що
     існують, придатні для аналізу стану та динаміки
     хаотичних систем, що створило фізично зумовлене обґрунтування працездатності систем
     ідентифікації;
 
-  \item
+  \item \justifying
     створено новий клас систем ідентифікації у межах
     адаптивно-пошуковой парадигми,
     які, за рахунок використання колективної динаміки
     ансамблю пошукових агентів, забезпечують
     кращу швидкість ідентифікації без істотного впливу на похибку ідентифікації;
 
-  \item
+  \item \justifying
     проведена перевірка працездатності запропонованих методів
     на прикладах як відомих систем хаотичної динаміки,
     так і на прикладах декількох інших динамічних систем (модельних та фізичних),
     які проявляють складну та хаотичну динаміку;
 
-  \item
+  \item \justifying
    визначено, що системи з сухим тертям з точки зору задачі ідентифікації
    при певних  умовах функціонування
    мають властивості, що поєднують їх з системами хаотичної динаміки;
 
- \item
+ \item \justifying
   створено програмне забезпечення, придатне для моделювання як систем
   хаотичної динаміки, так і систем мультиагентної ідентифікації;
 
-  \item
+  \item \justifying
   проведено як комп'ютерне моделювання процесів ідентифікації систем
   хаотичної динаміки, так і фізичне моделювання таких, що підтверджує адекватність
   побудованих моделей.
