--- a/slides/slides_atu.tex
+++ b/slides/slides_atu.tex
@@ -238,25 +238,32 @@
 
     \item \justifying
       Нелінійні динамічні системи, розповсюджені в сучасних технологічних і
-      природних процесах, незважаючи на детермінізм їх визначення, можуть проявляти
+      природних процесах, незважаючи на детер\-мі\-нізм їх визначення, можуть проявляти
       хаотичні властивості в своїй динаміці. При цьому як завгодно малі збурення у вхідних
       впливах і параметрах самої системи призводять до значних, але кінцевих збурень
       вихідного сигналу. Це призводить до певних труднощів при конструюванні,
       управлінні і прогнозі поведінки таких систем.
 
     \item \justifying
-      Існуючі методи ідентифікації або принципово непридатні для
-      роботи з хаотичними системами, або ж вимагають виконання досить
+      Існуючі методи ідентифікації або принципово непридатні \\
+      для роботи з хаотичними системами, або ж вимагають виконання досить
       жорстких умов.
 
     \item \justifying
-      Існують динамічні системи, що не володіють строгими
-      властивостями хаотичності, але мають з ними спільні властивості
+      Спеціальні характеристики оцінювання хаотичних властивостей динамічних
+      систем, такі як фрактальна розмірність, показник Ляпунова, перетин Пуанкаре, ---
+      недостатньо інформативні для задачі ідентифікації через обмежений діапазон
+      змін, велику похибку при їх вимірі для реальних систем і суттєву
+      обчислювальну складність.
+
+    \item \justifying
+      Існують динамічні технічні системи, які не є хаотичними у суворому математичному сенсі,
+      але мають з ними спільні властивості
       з точки зору ідентифікації.
 
     \item \justifying
-      Властивості існуючих методів ідентифікації нелінійних
-      динамічних систем обмежують досяжну якість ідентифікації,
+      Властивості існуючих методів ідентифікації нелінійних \\
+      динамічних систем обмежують досяжну якість ідентифікації,\\
       особливо стосовно до хаотичних систем.
 
   \end{itemize}
@@ -297,7 +304,7 @@
     \item \justifying
       створити моделі процесів
       ідентифікації хаотичних систем з використанням запропонованих методів,
-      провести комп'ютерне моделювання процесів ідентифікації систем
+      провести комп'ю\-терне моделювання процесів ідентифікації систем
       хаотичної динаміки та дослідити їх працездатність, можливості та
       характеристики;
 
@@ -313,7 +320,8 @@
 
     \item \justifying
       розробити програмне забезпечення, придатне для моделювання систем
-      хаотичної динаміки, систем ідентифікації, предікції та управління.
+      хаотичної динаміки, систем ідентифікації,\\
+      предікції та управління.
 
 \end{itemize}
 
@@ -455,7 +463,7 @@
   \vfill
 
 
-Системи пошукової та адаптивно-пошукової ідентифікації:
+Системи пошукової та адаптивно-пошукової ідентифікації:\\
   М.М.~Івахненко,
   А.А.~Красовський,
   Н.Н.~Карабутов,
@@ -471,11 +479,11 @@
   Ф.~Мун,
   M.P.~Kennedy,
   J.C.~Sprott,
-  В.С.~Аніщенко,
+  В.С.~Аніщенко,\\
   В.В.~Астахов,
   Т.Е.~Вадивасова,
   А.Б.~Нейман,
-  Н.А.~Магніцкий,
+  Н.А.~Магніцкий,\\
   А.С.~Дмитриєв,
   Е.В.~Єфремова,
   С.П.~Кузнецов,
@@ -767,7 +775,8 @@
   може обмінюватися інформацією з іншими елементами пошукової системи,
   та, на підставі значення критерію
   ідентифікації, реалізує алгоритм настройки параметрів моделі (моделей) таким
-  чином, щоб забезпечити визначення заданого параметра.
+  чином, щоб забезпечити\\
+  визначення заданого параметра.
 
   \smallskip
 
@@ -2065,19 +2074,23 @@ $p_{leW}$.
   \Xhead{}
 
   \begin{figure}
-    \PicDoubleS{../p7/p/relax3d_f_02.png}{../p7/p/relax3d_v1v2v3_02.png}
+    \PicDouble{../p7/p/relax3d_f_02.png}{../p7/p/relax3d_v1v2v3_02.png}
     \caption{Спектр $V_b(t)$~(a), і аттрактор~(b) для системи ``relax3d'' при $R_b = \SI{5.0}{\kilo \ohm} $}
     \label{atu:f:relax3d_f_02}
   \end{figure}
 
+  \vspace{-3ex}
+
   \begin{figure}
-    \PicDoubleS{../p7/p/relax3d_f_08.png}{../p7/p/relax3d_v1v2v3_08.png}
+    \PicDouble{../p7/p/relax3d_f_08.png}{../p7/p/relax3d_v1v2v3_08.png}
     \caption{Спектр $V_b(t)$~(a), і аттрактор~(b) для системи ``relax3d'' при $ R_b = \SI{34.0}{\kilo\ohm} $}
     \label{atu:f:relax3d_f_08}
   \end{figure}
 
+  \vspace{-3ex}
+
   \begin{figure}
-    \PicDoubleS{../p7/p/relax3d_f_09.png}{../p7/p/relax3d_v1v2v3_09.png}
+    \PicDouble{../p7/p/relax3d_f_09.png}{../p7/p/relax3d_v1v2v3_09.png}
     \caption{Спектр $V_b(t)$~(a), и аттрактор~(b) для системи ``relax3d'' при $R_b=\SI{36.0}{\kilo\ohm}$ }
     \label{atu:f:relax3d_f_09}
   \end{figure}
@@ -2111,9 +2124,9 @@ $p_{leW}$.
       C_1 \dot{V}_1 = \frac{V_b-V_1}{R_{v1}} - \frac{V_1}{R_1} \mathrm{On}_1() - I_{1,\mathrm{leak}}(V_1), \\
       C_2 \dot{V}_2 = \frac{V_b-V_2}{R_{v2}} - \frac{V_2}{R_2} \mathrm{On}_2() - I_{2,\mathrm{leak}}(V_2), \\
       C_3 \dot{V}_3 = \frac{V_b-V_3}{R_{v3}} - \frac{V_3}{R_3} \mathrm{On}_3() - I_{3,\mathrm{leak}}(V_3), \\
-      I_i = \frac{V_b-V_i}{R_{vi}}.
-  \end{cases}.
-    \label{atu:eq:relax3}
+      I_i = \frac{V_b-V_i}{R_{vi}},
+  \end{cases}
+  \label{atu:eq:relax3}
 \end{equation}
 %
 де: \\
@@ -2276,7 +2289,8 @@ $I_{i, \mathrm{leak}} $ --- струми витоку.
   хаотичної динаміки, так і систем мультиагентної ідентифікації;
 
   \item \justifying
-  проведено як комп'ютерне моделювання процесів ідентифікації систем
+  проведено як комп'ютерне моделювання процесів\\
+  ідентифікації систем
   хаотичної динаміки, так і фізичне моделювання таких, що підтверджує адекватність
   побудованих моделей.
 
